--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,174 @@
 {% load static %}
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forecast For You</title>
-    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
-</head>
-<body>
 
-    <h1 class="heading">
-        Forecast For You
-    </h1>
-    
+{% include 'head.html' %}
+
+<body>
+    <!-- NAVBAR  -->
+    {% include 'navbar.html' %}
+    <!-- Optional JavaScript; choose one of the two! -->
+
+
+    <!-- HERO SECTION  -->
+    <div class="container-fluid">
+        <div class="row pt-5 m-0">
+            <div class="hero-desc col-lg-6 col-12 mt-5">
+                <div>
+                    <h1 class="hero-heading display-4 p-1 m-0">
+                        Forecast For You.
+                    </h1>
+                    <p class="para-font p-1 m-0">
+                        We keep you upto date of what is happening in your environment by providing on-time and accurate wheather forecast around the globe.
+                    </p>
+                    <button type="button" class="mt-3 btn btn-outline-dark" style="border-radius: 50px;">Get Started</button>
+                </div>
+            </div>
+            <div class="hero-img-head col-lg-6 col-12 mt-1">
+                <img src="{% static 'assets/img/hero-img.svg' %}" alt="" class="hero-img img-fluid">
+            </div>
+        </div>
+    </div>
+
+    <!-- OUR SERVICES  -->
+    <div class="container-fluid pt-5 mt-5s">
+        <h1 class="text-center hero-heading display-5 p-1 m-0">
+            Our Services
+        </h1>
+        <p class="text-center para-font">
+            We provide a number of services of wheather forecasting services.<br> Everything you need to be upto dated with the current wheather and make wise decisions based on that.
+            <i class="fas fa-thermometer-half"></i>
+        </p>
+        <div class="p-1 mt-1">
+            <img style="width: 4rem;" class="img-fluid" src="{% static 'assets/img/arrow.png' %}" alt="arrow">
+        </div>
+        <div class="row pt-5">
+            <div class="d-flex flex-column align-items-center p-2 col-lg-4 col-12">
+                <div class="service-card d-flex flex-column align-items-center p-3">
+                    <img style="width: 4rem;" class="img-fluid" src="{% static 'assets/img/celsius.png' %}" alt="temp">
+                    <p class="fw-bold pt-3 para-font">
+                        Temprature of any city
+                    </p>
+                </div>
+            </div>
+
+            <div class="d-flex flex-column align-items-center p-2 col-lg-4 col-12">
+                <div class="service-card d-flex flex-column align-items-center p-3">
+                    <img style="width: 4rem;" class="img-fluid" src="{% static 'assets/img/humidity.png' %}" alt="temp">
+                    <p class="fw-bold pt-3 para-font">
+                        Humidity Level of any city
+                    </p>
+                </div>
+            </div>
+
+            <div class="d-flex flex-column align-items-center p-2 col-lg-4 col-12">
+                <div class="service-card d-flex flex-column align-items-center p-3">
+                    <img style="width: 4rem;" class="img-fluid" src="{% static 'assets/img/news.png' %}" alt="temp">
+                    <p class="fw-bold pt-3 para-font">
+                        Wheather News of globe
+                    </p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- PRICING SECTION  -->
+    <div class="container-fluid pt-5 mt-5">
+        <h1 class="text-center hero-heading display-5 p-1 m-0">
+            Pricing
+        </h1>
+        <p class="text-center para-font">
+            You can choose any one from the following plans.
+            <i class="fas fa-money-check-alt"></i>
+        </p>
+
+        <section class="container-fluid something-diff mt-5 pt-5" id="something-diff">
+            <div style="width: 100%;" class="row mt-5 d-flex justify-content-center align-items-center">
+
+                <div class="something-diff-col col-lg-4 col-12">
+                    <h1 style="font-size: 1.8rem;" class="pb-1 display-4 fw-bold service-head">
+                        Need video ads?
+                    </h1>
+                    <p style="font-size: 1.2rem;" class="pb-5 pt-2 hero-para_1">
+                        Supercharge your social CTR with our eye-catching video ads
+                    </p>
+                    <div style="width: 100%; border-top: 1.5px solid rgb(218, 218, 218);" class="pt-3 services d-flex justify-content-center align-items-center flex-column">
+                        <div class="pt-1 mt-3 mb-4">
+                            <p class="lead service-price-para">from &pound;</p>
+                            <h1 class="display-4 service-price-num">620</h1>
+                            <p class="lead service-price-para">per ad</p>
+                        </div>
+                        <div style="width: 100%;" class="pt-1 mt-3">
+                            <!-- <button class="plan-btn-1">
+                                <a href="#"><span>See Plans</span></a>
+                            </button> -->
+                            <a href="#">
+                                <button class="schedule-btn-1">
+                                    <a href="#"><span class="fw-bold">See Plans</span></a>
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="something-diff-col col-lg-4 col-12">
+                    <h1 style="font-size: 1.8rem;" class="pb-1 display-4 fw-bold service-head">
+                        Custom plan?
+                    </h1>
+                    <p style="font-size: 1.2rem;" class="pb-5 pt-2 hero-para_1">
+                        Choose how many images, videos and ads you receive
+                    </p>
+                    <div style="width: 100%; border-top: 1.5px solid rgb(218, 218, 218);" class="pt-3 services d-flex justify-content-center align-items-center flex-column">
+                        <div class="pt-1 mt-3 mb-4">
+                            <p class="lead service-price-para">custom plans from &pound;</p>
+                            <h1 class="display-4 service-price-num">290</h1>
+                        </div>
+                        <div style="width: 100%;" class="pt-1 mt-3">
+                            <a href="#">
+                                <button type="button" class="schedule-btn btn btn-outline-secondary"> <span>Schedule
+                                        Call</span>
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="something-diff-col col-lg-4 col-12">
+                    <h1 style="font-size: 1.8rem;" class="pb-1 display-4 fw-bold service-head">
+                        Want just images?
+                    </h1>
+                    <p style="font-size: 1.2rem;" class="pb-5 pt-2 hero-para_1">
+                        Expertly crafted social media images that get results
+                    </p>
+                    <div style="width: 100%; border-top: 1.5px solid rgb(218, 218, 218);" class="pt-3 services d-flex justify-content-center align-items-center flex-column">
+                        <div class="pt-1 mt-3 mb-4">
+                            <p class="lead service-price-para">from &pound;</p>
+                            <h1 class="display-4 service-price-num">40</h1>
+                            <p class="lead service-price-para">per image</p>
+                        </div>
+                        <div style="width: 100%;" class="pt-1 mt-3">
+                            <a href="#">
+                                <button type="button" class="schedule-btn btn btn-outline-secondary"> <span>Schedule
+                                        Call</span>
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+    </div>
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    -->
 </body>
+
 </html>
