--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
                     <h1 class="hero-heading display-4 p-1 m-0">
                         Forecast For You.
                     </h1>
-                    <p class="para-font p-1 m-0">
+                    <p style="font-size: 1.2rem;" class="para-font p-1 m-0">
                         We keep you upto date of what is happening in your environment by providing on-time and accurate wheather forecast around the globe.
                     </p>
                     <button type="button" class="mt-3 btn btn-outline-dark" style="border-radius: 50px;">Get Started</button>
@@ -31,37 +31,38 @@
     </div>
 
     <!-- OUR SERVICES  -->
-    <div class="container-fluid pt-5 mt-5s">
+    <div class="container-fluid pt-5 mt-5">
         <h1 class="text-center hero-heading display-5 p-1 m-0">
-            Our Services
+            Our Services.
         </h1>
-        <p class="text-center para-font">
+        <p style="font-size: 1.2rem;" class="text-center para-font">
             We provide a number of services of wheather forecasting services.<br> Everything you need to be upto dated with the current wheather and make wise decisions based on that.
-            <i class="fas fa-thermometer-half"></i>
+            <i style="font-size: 1.2rem;"class="fas fa-thermometer-half"></i>
         </p>
         <div class="p-1 mt-1">
             <img style="width: 4rem;" class="img-fluid" src="{% static 'assets/img/arrow.png' %}" alt="arrow">
         </div>
+
         <div class="row pt-5">
-            <div class="d-flex flex-column align-items-center p-2 col-lg-4 col-12">
+            <div class="d-flex flex-column align-items-center mt-2 p-2 col-lg-4 col-12">
                 <div class="service-card d-flex flex-column align-items-center p-3">
                     <img style="width: 4rem;" class="img-fluid" src="{% static 'assets/img/celsius.png' %}" alt="temp">
                     <p class="fw-bold pt-3 para-font">
-                        Temprature of any city
+                        &ensp; Temprature of any city &ensp;
                     </p>
                 </div>
             </div>
 
-            <div class="d-flex flex-column align-items-center p-2 col-lg-4 col-12">
+            <div class="d-flex flex-column align-items-center mt-2 p-2 col-lg-4 col-12">
                 <div class="service-card d-flex flex-column align-items-center p-3">
                     <img style="width: 4rem;" class="img-fluid" src="{% static 'assets/img/humidity.png' %}" alt="temp">
                     <p class="fw-bold pt-3 para-font">
-                        Humidity Level of any city
+                        &ensp;Humidity Level of any city&ensp;
                     </p>
                 </div>
             </div>
 
-            <div class="d-flex flex-column align-items-center p-2 col-lg-4 col-12">
+            <div class="d-flex flex-column align-items-center mt-2 p-2 col-lg-4 col-12">
                 <div class="service-card d-flex flex-column align-items-center p-3">
                     <img style="width: 4rem;" class="img-fluid" src="{% static 'assets/img/news.png' %}" alt="temp">
                     <p class="fw-bold pt-3 para-font">
@@ -71,95 +72,218 @@
             </div>
 
         </div>
+
+
+        <div class="row">
+            <div class="d-flex flex-column align-items-center mt-2 p-2 col-lg-4 col-12">
+                <div class="service-card d-flex flex-column align-items-center p-3">
+                    <img style="width: 4rem;" class="img-fluid" src="{% static 'assets/img/pressure.png' %}" alt="temp">
+                    <p class="fw-bold pt-3 para-font">
+                        Pressure Level of any city
+                    </p>
+                </div>
+            </div>
+
+            <div class="d-flex flex-column align-items-center mt-2 p-2 col-lg-4 col-12">
+                <div class="service-card d-flex flex-column align-items-center p-3">
+                    <img style="width: 4rem;" class="img-fluid" src="{% static 'assets/img/analysis.png' %}" alt="temp">
+                    <p class="fw-bold pt-3 para-font">
+                        Wheather Analysis of any city
+                    </p>
+                </div>
+            </div>
+
+            <div class="d-flex flex-column align-items-center mt-2 p-2 col-lg-4 col-12">
+                <div class="service-card d-flex flex-column align-items-center p-3">
+                    <img style="width: 4rem;" class="img-fluid" src="{% static 'assets/img/history.png' %}" alt="temp">
+                    <p class="fw-bold pt-3 para-font">
+                        &ensp; &ensp; History of Forecast &ensp; &ensp; 
+                    </p>
+                </div>
+            </div>
+
+        </div>
+
     </div>
 
     <!-- PRICING SECTION  -->
-    <div class="container-fluid pt-5 mt-5">
+    <div style="background-color: #ececec;" class="container-fluid pt-5 mt-5 pb-5">
         <h1 class="text-center hero-heading display-5 p-1 m-0">
-            Pricing
+            Pricing.
         </h1>
-        <p class="text-center para-font">
+        <p style="font-size: 1.2rem;" class="text-center para-font">
             You can choose any one from the following plans.
-            <i class="fas fa-money-check-alt"></i>
+            <i style="font-size: 1.2rem;" class="fas fa-money-check-alt"></i>
         </p>
 
-        <section class="container-fluid something-diff mt-5 pt-5" id="something-diff">
-            <div style="width: 100%;" class="row mt-5 d-flex justify-content-center align-items-center">
+        <div class="row pt-3">
 
-                <div class="something-diff-col col-lg-4 col-12">
-                    <h1 style="font-size: 1.8rem;" class="pb-1 display-4 fw-bold service-head">
-                        Need video ads?
-                    </h1>
-                    <p style="font-size: 1.2rem;" class="pb-5 pt-2 hero-para_1">
-                        Supercharge your social CTR with our eye-catching video ads
-                    </p>
-                    <div style="width: 100%; border-top: 1.5px solid rgb(218, 218, 218);" class="pt-3 services d-flex justify-content-center align-items-center flex-column">
-                        <div class="pt-1 mt-3 mb-4">
-                            <p class="lead service-price-para">from &pound;</p>
-                            <h1 class="display-4 service-price-num">620</h1>
-                            <p class="lead service-price-para">per ad</p>
-                        </div>
-                        <div style="width: 100%;" class="pt-1 mt-3">
-                            <!-- <button class="plan-btn-1">
-                                <a href="#"><span>See Plans</span></a>
-                            </button> -->
-                            <a href="#">
-                                <button class="schedule-btn-1">
-                                    <a href="#"><span class="fw-bold">See Plans</span></a>
-                                </button>
-                            </a>
-                        </div>
-                    </div>
+            <div class="col-lg-4 col-12 p-4">
+            <div style="border-radius: 20px;" class="bg-white p-5 border-rounded shadow">
+                <h3 class="heading-font">
+                    Standard
+                </h3>
+                <p style="font-size: 1.2rem;" class="para-font pb-5">
+                    Avail all of our services for your current city
+                </p>
+                <div style="border-top: 1.5px solid rgb(218, 218, 218)" class="pt-1">
+                    <p style="font-size: 1.2rem;" class="pt-3 pb-2 para-font text-center">from <span style="font-size: 2rem;" class="fw-bold">$10</span> per year</p>
                 </div>
-
-                <div class="something-diff-col col-lg-4 col-12">
-                    <h1 style="font-size: 1.8rem;" class="pb-1 display-4 fw-bold service-head">
-                        Custom plan?
-                    </h1>
-                    <p style="font-size: 1.2rem;" class="pb-5 pt-2 hero-para_1">
-                        Choose how many images, videos and ads you receive
-                    </p>
-                    <div style="width: 100%; border-top: 1.5px solid rgb(218, 218, 218);" class="pt-3 services d-flex justify-content-center align-items-center flex-column">
-                        <div class="pt-1 mt-3 mb-4">
-                            <p class="lead service-price-para">custom plans from &pound;</p>
-                            <h1 class="display-4 service-price-num">290</h1>
-                        </div>
-                        <div style="width: 100%;" class="pt-1 mt-3">
-                            <a href="#">
-                                <button type="button" class="schedule-btn btn btn-outline-secondary"> <span>Schedule
-                                        Call</span>
-                                </button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="something-diff-col col-lg-4 col-12">
-                    <h1 style="font-size: 1.8rem;" class="pb-1 display-4 fw-bold service-head">
-                        Want just images?
-                    </h1>
-                    <p style="font-size: 1.2rem;" class="pb-5 pt-2 hero-para_1">
-                        Expertly crafted social media images that get results
-                    </p>
-                    <div style="width: 100%; border-top: 1.5px solid rgb(218, 218, 218);" class="pt-3 services d-flex justify-content-center align-items-center flex-column">
-                        <div class="pt-1 mt-3 mb-4">
-                            <p class="lead service-price-para">from &pound;</p>
-                            <h1 class="display-4 service-price-num">40</h1>
-                            <p class="lead service-price-para">per image</p>
-                        </div>
-                        <div style="width: 100%;" class="pt-1 mt-3">
-                            <a href="#">
-                                <button type="button" class="schedule-btn btn btn-outline-secondary"> <span>Schedule
-                                        Call</span>
-                                </button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
+                <button style="border-radius: 20px; padding: 10px 0px 10px 0px;" type="button" class="mt-3 d-block container-fluid btn btn-outline-dark">Purchase</button>
             </div>
-        </section>
+            </div>
+
+            <div class="col-lg-4 col-12 p-4">
+                <div style="border-radius: 20px;" class="bg-white p-5 border-rounded shadow">
+                    <h3 class="heading-font">
+                        Standard
+                    </h3>
+                    <p style="font-size: 1.2rem;" class="para-font pb-5">
+                        Avail all of our services for your current city
+                    </p>
+                    <div style="border-top: 1.5px solid rgb(218, 218, 218)" class="pt-1">
+                        <p style="font-size: 1.2rem;" class="pt-3 pb-2 para-font text-center">from <span style="font-size: 2rem;" class="fw-bold">$10</span> per year</p>
+                    </div>
+                    <button style="border-radius: 20px; padding: 10px 0px 10px 0px;" type="button" class="mt-3 d-block container-fluid btn btn-outline-dark">Purchase</button>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-12 p-4">
+                <div style="border-radius: 20px;" class="bg-white p-5 border-rounded shadow">
+                    <h3 class="heading-font">
+                        Standard
+                    </h3>
+                    <p style="font-size: 1.2rem;" class="para-font pb-5">
+                        Avail all of our services for your current city
+                    </p>
+                    <div style="border-top: 1.5px solid rgb(218, 218, 218)" class="pt-1">
+                        <p style="font-size: 1.2rem;" class="pt-3 pb-2 para-font text-center">from <span style="font-size: 2rem;" class="fw-bold">$10</span> per year</p>
+                    </div>
+                    <button style="border-radius: 20px; padding: 10px 0px 10px 0px;" type="button" class="mt-3 d-block container-fluid btn btn-outline-dark">Purchase</button>
+                </div>
+            </div>
+
+        </div>
+
     </div>
+
+
+    <!-- ABOUT US SECTION  -->
+    <div id="about_us" class="d-flex flex-column justify-content-center align-items-center container-fluid pt-5 mt-2">
+        <h1 class="text-center hero-heading display-5 p-1 m-0">
+            About Us.
+        </h1>
+        <div class="p-5">
+            <p style="font-size: 1.2rem; text-align: justify;" class="para-font">
+                We here at <strong>Forecast for you</strong> work together in order to keep upto dated of what is happenning around your environment and surroundings and what might happen so that you can make timely decisions and keep yourself sound and safe from any losses. We have a vast network of wheather stations around the world by which we provide you the accurate foerecast of wheather and wheather analysis of almost every city of world no matter where you live. We also provide you the services of wheather forecasting news which will keep you alert from the news of global wheather.It all starts from August 2010 when our CEO lost his mother due to heavy rain and thuderstorm in his town, after this incident he decided to build an ecosystem which will alert people if they are going to face any sort of storm, flood or heavy rainfall so that they can save the lives of themselves and of their loved ones. 
+            </p>
+        </div>
+        <div class="p-1">
+            <img src="{% static 'assets/img/about.svg' %}" alt="about" class="img-fluid about-img">
+        </div>
+    </div>
+
+
+    <!-- CONTACT US SECTION  -->
+    <div  id="contact-us" class="container-fluid pt-5 mt-2">  
+        <h1 class="text-center hero-heading display-5 p-1 m-0">
+            Contact Us.
+        </h1>
+        <div class="row pt-1">
+
+
+            <div class="map-head col-lg-4 col-12 p-5">
+                <div style="border-radius: 20px;" class="d-flex flex-column justify-content-center align-items-center border p-2 shadow">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11341.927666255007!2d67.10000096261287!3d24.912996893711227!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1640497735297!5m2!1sen!2s" width="400" height="300" style="border:0; border-radius: 20px 20px 0px 0px;" allowfullscreen="" loading="lazy"></iframe>
+                <div class="d-flex container-fluid pt-4">
+                    <div class="p-3">
+                        <i style="font-size: 1.5rem;" class="far fa-compass"></i>
+                    </div>
+                    <div class="p-1">
+                        <p class="para-font">
+                            Forecast for You Private Limited. <br>
+                            A-302 Dueplex Apartments, Gulshan-e-Iqbal, Karachi, Sindh.
+                        </p>
+                    </div>
+                </div>
+                <div class="container-fluid d-flex pt-2">
+                        <div class="p-3">
+                            <i style="font-size: 1.2rem;" class="fas fa-phone-alt"></i>
+                        </div>
+                        <div class="p-1">
+                            <p class="para-font mt-2">
+                                +92-45473638375
+                            </p>
+                        </div>    
+                </div>
+                <div class="d-flex container-fluid pt-2">
+                        <div class="p-3">
+                            <i style="font-size: 1.2rem;" class="fas fa-envelope"></i>
+                        </div>
+                        <div class="p-1">
+                            <p class="para-font mt-2">
+                                forecastforyou@gmail.com
+                            </p>
+                        </div>    
+                </div>
+            </div>
+            </div>
+
+
+            <div class="col-lg-8 col-12 p-5">
+                <h5 class="heading-font contact-heading">
+                    Fill in the form below, We'll be in touch with you soon:
+                </h5>
+                <form action="#" class="pt-1">
+                    <div class="row pt-2">
+                        <div class="col-lg-6 col-12 pt-4">
+                            <input style="font-size: 1.15rem;" type="text" name="name" id="name" placeholder="Name" class="para-font p-3 name-input d-block container-fluid">
+                        </div>
+                        <div class="col-lg-6 col-12 pt-4">
+                            <input style="font-size: 1.15rem;" type="email" name="name" id="name" placeholder="Email Address" class="para-font p-3 email-input d-block container-fluid">
+                        </div>
+                    </div>
+                    <div class="row pt-1">
+                        <div class="col-lg-6 col-12 pt-4">
+                            <input style="font-size: 1.15rem;" type="text" name="name" id="name" placeholder="Company Name" class="para-font p-3 comp-name-input d-block container-fluid">
+                        </div>
+                        <div class="col-lg-6 col-12 pt-4">
+                            <input style="font-size: 1.15rem;" type="text" name="name" id="name" placeholder="Website" class="para-font p-3 website-input d-block container-fluid">
+                        </div>
+                    </div>
+                    <div class="row pt-4">
+                        <div class="col-lg-12 col-12">
+                            <textarea style="font-size: 1.15rem;" name="message" id="message" cols="30" rows="10" placeholder="Message" class="para-font p-3 message-input d-block container-fluid"></textarea>
+                        </div>
+                    </div>
+                    <div class="pt-4 d-flex justify-content-end">
+                        <button style="border-radius: 12px;" type="button" class="btn btn-dark">Submit</button>
+                    </div>
+                </form>
+            </div>  
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
