--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -30,11 +30,11 @@
                     </li>
 
                     <li class=nav_link_head nav-item ">
-                        <a class="nav-link " href="# ">About Us</a>
+                        <a class="nav-link " href="#about_us">About Us</a>
                     </li>
 
                     <li class="nav_link_head nav-item ">
-                        <a class="nav-link " href="# ">Contact Us</a>
+                        <a class="nav-link " href="#contact-us">Contact Us</a>
                     </li>
 
 
